--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/b-paul/ng-madlibs",
   "devDependencies": {
     "angular": "^1.4.8",
+    "angular-animate": "^1.4.8",
     "babel": "^6.3.26",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
